--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
             <a href="https://fastapi.tiangolo.com/">FastAPI</a> and
             <a href="https://www.sqlite.org/index.html">SQLite</a>.
             <br>
-            Created with ❤️ by <a href="https://github.com/vignif">Francesco Vigni</a>
+            Created with 🫀 in 🇮🇹 by <a href="https://github.com/vignif">Francesco Vigni</a>
             in 2025.
         </p>
     </footer>
