--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
                     <button type="submit">Save</button>
                     <div class="char-count"><span id="charCount">0</span>/2000 characters</div>
                 </div>
-                <p id="row-count">Total rows: ...</p>
+                <div>Total rows: <p id="row-count" style="display: inline;">: ...</p></div>
             </form>
 
            
