move to socket.io

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasty</title>
     <link rel="stylesheet" href="{{ url_for('static', path='style.css') }}">
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 </head>
 <body data-retrieved="{{ 'true' if retrieved_content else '' }}" data-error="{{ 'true' if error else '' }}">
     <div class="container">
