--- a/templates/index.html
+++ b/templates/index.html
@@ -70,8 +70,9 @@
     <footer class="footer">
         <p>
             Pasty - A simple text storage application powered by
-            <a href="https://fastapi.tiangolo.com/">FastAPI</a> and
-            <a href="https://www.sqlite.org/index.html">SQLite</a>.
+            <a href="https://socket.io/">Socket.IO</a>,
+            <a href="https://www.sqlite.org/index.html">SQLite</a>, and
+            <a href="https://fastapi.tiangolo.com/">FastAPI</a>.
             <br>
             Made with 🫀 in 🇮🇹 by <a href="https://github.com/vignif">Francesco Vigni</a>
             in 2025.
