Enhance documentation and structure: add README, improve index and readme.html, and update FastAPI app with new endpoints and utility functions

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,16 @@
                 <img src="{{ url_for('static', path='logo.png') }}" alt="Pasty Logo">
             </a>
         </div>
-        <p>Pasty is an online text storage application. It works as an online clipboard to store and retrieve text. All text is stored in a SQLite database. 
+        <p>Pasty is smart online clipboard to store and retrieve text. All text is stored in a SQLite database. 
             The text is deleted after a configurable period of time.
             Store up to 2000 characters. <a href="https://github.com/vignif/pasty">Source code available</a>.
         </p>
         <p> Do not store sensitive information.
             The information will be stored up to 12 hours.
+        </p>
+        <hr>
+        <p>
+             Why is it <a href="/readme" >smart</a>?
         </p>
 
         <!-- Tab Navigation -->
