--- a/static/style.css
+++ b/static/style.css
@@ -19,13 +19,13 @@ body {
   display: flex;
   flex-direction: column;
   width: -webkit-fill-available;
-  margin: 1rem;
 }
 
 .container {
   background: white;
   max-width: 700px;
   margin: auto;
+  margin-bottom: 1rem;
   padding: 2rem;
   border-radius: 12px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
